--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 install: true
 script:
-  - mvn install
+  - mvn cobertura:cobertura
 jdk:
   - openjdk13
 
@@ -11,6 +11,7 @@ sudo: false
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
