--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 # используем язык java. Travis CI поддерживает другие языки тоже.
 language: java
 install: true
-script:
-  - mvn install
 jdk:
   - openjdk13
 
@@ -12,7 +10,7 @@ sudo: false
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -f build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml
+  - bash <(curl -s https://codecov.io/bash) 
 
 # Отправлять уведомление на почтуyouremail@smtp.ru(Изменить на свою) если сборка упала
 notifications:
